# pi-web

./: .gitignore  Cargo.toml  PLAN.md  README.md
.github/workflows/: deploy.yml  e2e.yml  health-check.yml
deploy/: auto-deploy.sh  deploy.sh  nginx-snippet.conf  pi-web.service
docs/: COMMAND_CONTRACT.md
scripts/: auto-deploy.sh
spa/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
spa/src/: app.css  diff.ts  http-agent.ts  main.ts  notifications.ts  tool-renderers.ts
spa/src/components/: diff-preview.ts  file-context-menu.ts  file-tree.ts  file-upload.ts  session-stats.ts  slash-commands.ts
spa/src/pages/: session-chat.ts  session-list.ts
spa/tests/: e2e.spec.ts
src/: auth.rs  config.rs  embed.rs  main.rs
src/api/: config.rs  event.rs  file.rs  git.rs  message.rs  mod.rs  notify.rs  session.rs  shell.rs  v1.rs
src/pi/: agent.rs  manager.rs  mod.rs  protocol.rs
