[package]
name = "pi-web"
version = "0.1.0"
edition = "2024"
description = "HTTP server wrapper for pi_agent_rust with SPA, inspired by agent-discord-rs"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors"] }
anyhow = "1"
futures = "0.3"
async-stream = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
walkdir = "2"
data-encoding = "2"
